--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
           />
         </svg>
       </a>
-      <a href="#"
+      <a href="https://github.com/farco-studio/interactions-planets-reveal"
         >GitHub
         <svg
           width="24"
